[gd_scene load_steps=15 format=3 uid="uid://b3j4k722cf5c4"]

[ext_resource type="Texture2D" uid="uid://ciufklrbhy8ro" path="res://Optionbar/InventoryRect.png" id="1_2jdyx"]
[ext_resource type="Script" path="res://Optionbar/optionbar.gd" id="1_ek6y1"]
[ext_resource type="Texture2D" uid="uid://cmf3bph3mtqb2" path="res://Optionbar/close button.png" id="3_oie7c"]
[ext_resource type="Texture2D" uid="uid://cqyb7cv4a2jkf" path="res://Optionbar/close button pressed.png" id="4_d5vgi"]
[ext_resource type="Texture2D" uid="uid://b50y1o5odckwc" path="res://Player/RessourceBar/coin.png" id="7_j0eu4"]
[ext_resource type="Theme" uid="uid://chlqi1c1wehen" path="res://Optionbar/optionbar.tres" id="8_3yvnb"]
[ext_resource type="FontFile" uid="uid://c5bot1t0ttb6b" path="res://Optionbar/04B_30__.TTF" id="8_ehm71"]
[ext_resource type="Texture2D" uid="uid://blpllbfwmq0sr" path="res://Player/RessourceBar/lightning.png" id="8_qjtg3"]
[ext_resource type="Theme" uid="uid://b1j2crruxkr7b" path="res://Optionbar/optionbarcancel.tres" id="9_pyeph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pa718"]
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu331"]
bg_color = Color(0.913725, 0.701961, 0.309804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aukka"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6jxy"]
bg_color = Color(0.168627, 0.403922, 0.639216, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6t52k"]

[node name="optionbar" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ek6y1")

[node name="optionbar_rect" type="NinePatchRect" parent="."]
z_index = 1
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 170.0
texture = ExtResource("1_2jdyx")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="building_name" type="Label" parent="optionbar_rect"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 102.0
offset_top = 6.0
offset_right = 198.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("8_ehm71")
text = "Test"
horizontal_alignment = 1

[node name="building_level" type="Label" parent="optionbar_rect"]
layout_mode = 0
offset_left = 102.0
offset_top = 25.0
offset_right = 198.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("8_ehm71")
theme_override_font_sizes/font_size = 6
text = "test"
horizontal_alignment = 1

[node name="closeButton" type="TextureButton" parent="optionbar_rect"]
layout_mode = 0
offset_left = 273.0
offset_top = 8.0
offset_right = 291.0
offset_bottom = 26.0
texture_normal = ExtResource("3_oie7c")
texture_pressed = ExtResource("4_d5vgi")
stretch_mode = 0

[node name="buildingRect" type="NinePatchRect" parent="optionbar_rect"]
layout_mode = 0
offset_left = 7.0
offset_top = 35.0
offset_right = 127.0
offset_bottom = 150.0
texture = ExtResource("1_2jdyx")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="building_image" type="Sprite2D" parent="optionbar_rect/buildingRect"]

[node name="RessorceRect" type="NinePatchRect" parent="optionbar_rect"]
layout_mode = 0
offset_left = 132.0
offset_top = 35.0
offset_right = 293.0
offset_bottom = 87.0
texture = ExtResource("1_2jdyx")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="moonetenbar" type="ProgressBar" parent="optionbar_rect/RessorceRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 11.0
offset_right = 152.0
offset_bottom = 19.0
theme_override_styles/background = SubResource("StyleBoxFlat_pa718")
theme_override_styles/fill = SubResource("StyleBoxFlat_wu331")
max_value = 500.0
value = 499.0
show_percentage = false

[node name="mooneten_label" type="Label" parent="optionbar_rect/RessorceRect/moonetenbar"]
layout_mode = 0
offset_left = 43.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("8_ehm71")
theme_override_font_sizes/font_size = 4
text = "500 / 500"
horizontal_alignment = 1

[node name="energybar" type="ProgressBar" parent="optionbar_rect/RessorceRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 35.0
offset_right = 152.0
offset_bottom = 43.0
theme_override_styles/background = SubResource("StyleBoxFlat_aukka")
theme_override_styles/fill = SubResource("StyleBoxFlat_b6jxy")
max_value = 500.0
value = 400.0
show_percentage = false

[node name="energy_label" type="Label" parent="optionbar_rect/RessorceRect/energybar"]
layout_mode = 0
offset_left = 44.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("8_ehm71")
theme_override_font_sizes/font_size = 4
text = "400 / 500"
horizontal_alignment = 1

[node name="Coin" type="Sprite2D" parent="optionbar_rect/RessorceRect"]
position = Vector2(20, 15)
scale = Vector2(0.0358887, 0.0307617)
texture = ExtResource("7_j0eu4")

[node name="Moonstone" type="Sprite2D" parent="optionbar_rect/RessorceRect"]
position = Vector2(20, 38)
scale = Vector2(0.0530868, 0.0471458)
texture = ExtResource("8_qjtg3")

[node name="buttons_rect" type="NinePatchRect" parent="optionbar_rect"]
layout_mode = 0
offset_left = 132.0
offset_top = 94.0
offset_right = 293.0
offset_bottom = 150.0
texture = ExtResource("1_2jdyx")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="buttons" type="Control" parent="optionbar_rect/buttons_rect"]
anchors_preset = 0
offset_right = 162.0
offset_bottom = 56.0
theme = ExtResource("8_3yvnb")

[node name="play_2_button" type="Button" parent="optionbar_rect/buttons_rect/buttons"]
layout_mode = 1
anchors_preset = -1
offset_left = 85.0
offset_top = 30.0
offset_right = 151.0
offset_bottom = 46.0
text = "Play 2"

[node name="play_1_button" type="Button" parent="optionbar_rect/buttons_rect/buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.5
anchor_right = 0.043
anchor_bottom = 0.5
offset_left = 78.28
offset_top = -18.0
offset_right = 144.28
offset_bottom = -2.0
text = "Play 1"

[node name="upgrade_button" type="Button" parent="optionbar_rect/buttons_rect/buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.5
anchor_right = 0.043
anchor_bottom = 0.5
offset_left = 3.034
offset_top = -18.0
offset_right = 69.034
offset_bottom = -2.0
text = "upgrade"

[node name="info_button" type="Button" parent="optionbar_rect/buttons_rect/buttons"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.5
anchor_right = 0.043
anchor_bottom = 0.5
offset_left = 3.28
offset_top = 2.0
offset_right = 69.28
offset_bottom = 18.0
text = "soon..."

[node name="CenterContainer" type="CenterContainer" parent="optionbar_rect/buttons_rect"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 153.0
offset_bottom = 46.0

[node name="VBoxContainer" type="VBoxContainer" parent="optionbar_rect/buttons_rect/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HBoxContainer"]
position = Vector2(10, 10)
scale = Vector2(0.048, 0.043)
texture = ExtResource("7_j0eu4")

[node name="costs_lable" type="Label" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ehm71")
text = "  10000000"
horizontal_alignment = 3
vertical_alignment = 1

[node name="HSplitContainer" type="HBoxContainer" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="confirm_button" type="Button" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("9_pyeph")
theme_override_font_sizes/font_size = 8
text = " confirm "

[node name="seperator" type="VSeparator" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6t52k")

[node name="cancel_button" type="Button" parent="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("9_pyeph")
theme_override_font_sizes/font_size = 8
text = "    X    "

[connection signal="pressed" from="optionbar_rect/closeButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="optionbar_rect/buttons_rect/buttons/play_2_button" to="." method="_on_play_2_button_pressed"]
[connection signal="pressed" from="optionbar_rect/buttons_rect/buttons/play_1_button" to="." method="_on_play_1_button_pressed"]
[connection signal="pressed" from="optionbar_rect/buttons_rect/buttons/upgrade_button" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HSplitContainer/confirm_button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="optionbar_rect/buttons_rect/CenterContainer/VBoxContainer/HSplitContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
